--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+html, body {
+  width:100vw;
+}
+
 #root {
-  max-width: 1280px;
+/*  max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
